2011-02-02  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17087: BE user password not changable via setup module with "saltedpasswords" (Thanks to Marcus Krause)

2011-01-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17140: htmlArea RTE: In WebKit, RTE inserts incorrect link if text is double-clicked
	* Updated htmlArea RTE version to 1.8.14
	* Fixed bug #17160: htmlArea RTE: Link editing problems in Internet Explorer

2011-01-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16967: [Caching framework] Remove not exising "GlobalsBackend" from config_default.php

2011-01-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #13695: Image output in frontend is not xhtml valid

2011-01-05  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16900: [Cache] Filebackend fails on windows

2010-12-30  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15034: Login to backend fails with IPv6 Address as HTTP_HOST (Thanks to Roland Schenke)
	* Fixed bug #10480: Add missing header in auto_respond_msg (Thanks to Christian Buelter)

2010-12-28  Oliver Hader  <oliver.hader@typo3.org>

	* Release of TYPO3 4.3.10

2010-12-28  Benjamin Mack  <benni@typo3.org>

	* Revert change #16614 (rev. 968333 common.js resets TYPO3 namespace / Fixed regression #16831: 'Ext' is undefinded, Line: 81, js/common.js

2010-12-23  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16825: Fatal error in lang.php (thanks to Georg Ringer)

2010-12-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16760: RTE transformation removes all span tags on save after upgrade TYPO3 4.3.9

2010-12-20  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #16134: TYPO3 doesn't always fix permissions for new files

2010-12-17  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #5186: fixed rendering of multi-column image rows (thanks to Michael Bürgi)

2010-12-17  Steffen Kamper  <steffen@typo3.org>
