@@ -1,3 +1,7 @@
+2011-02-11  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Fixed bug #15721: Memcache::delete() without timeout param causes loss of memcache server in pool (Thanks to Michiel Ross)
+
 2011-02-02  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #17087: BE user password not changable via setup module with "saltedpasswords" (Thanks to Marcus Krause)
